--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.1.1
+version = 0.001
 
 name    = Module-Features-TextTable
 
@@ -6,10 +6,12 @@ name    = Module-Features-TextTable
 :version=0.603
 
 [Prereqs]
+perl=5.010001
+strict=0
+warnings=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
-DefHash=0
-Sah=0.9.49
+Module::Features=0.1.5
 
