--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,8 @@
-version = 0.002
+version = 0.003
 
 name    = Module-Features-TextTable
+
+[Module::Features]
 
 [@Author::PERLANCAR]
 :version=0.603
